<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="App_Fragment.Fragment_Accueil"
    android:gravity="center_horizontal">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenue sur Finances&amp;Nous"
        android:id="@+id/textBienvenue"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_news"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_coins_arrondis_back"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/textBienvenue"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:layout_alignTop="@+id/scroll_news"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="QUOI DE NEUF ?"
                android:id="@+id/textNewsTitre"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_row="0"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="v0.3 : Ajout des statistiques (accessible depuis le menu latéral)"
                    android:id="@+id/textView12"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="v0.2 : Fonctionnalité ajouter et prendre des photos (dans créer dépense)"
                    android:id="@+id/textView13"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="v0.1 : Création d&apos;une dépense"
                    android:id="@+id/textView14"
                    android:layout_margin="10dp" />
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listNews"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="15dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
