<resources>
    <string name="app_name">Finances &amp; Nous</string>
    <string name="title_activity_accueil">Finances &amp; Nous</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Options</string>
    <string name="title_activity_login">Finances &amp; Nous</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_inscription"><u>Inscrivez-vous !</u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Cet email est invalide</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_combo">L\'email ou le mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_test">test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="creerUneDepense">Créer une dépense</string>

</resources>
