<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Magasin_Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CRÉER UN MAGASIN"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Nom : "
            android:id="@+id/textView9"
            android:autoText="false"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginLeft="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:textColor="#a3a3a3"
            android:id="@+id/editTextNomMag"
            android:layout_alignBottom="@+id/textView16"
            android:layout_alignEnd="@+id/editTextMontant"
            android:layout_alignStart="@+id/spinner_domaine" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adresse : "
            android:id="@+id/textViewAdr"
            android:autoText="false"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginLeft="5dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:textColor="#a3a3a3"
            android:id="@+id/editTextAdrMag"
            android:hint="Rue"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textViewAdr" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:textColor="#a3a3a3"
            android:maxLength="5"
            android:id="@+id/editTextCPMag"
            android:layout_below="@+id/editTextAdrMag"
            android:layout_alignParentEnd="false"
            android:layout_alignEnd="@+id/editTextAdrMag"
            android:layout_alignStart="@+id/editTextAdrMag"
            android:hint="Code Postale" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#a3a3a3"
            android:id="@+id/editTextVilleMag"
            android:layout_below="@+id/editTextCPMag"
            android:layout_alignStart="@+id/editTextAdrMag"
            android:layout_alignEnd="@+id/editTextAdrMag"
            android:hint="Ville"
            android:inputType="text" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Site : "
            android:id="@+id/textView10"
            android:autoText="false"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/editTextSiteMag"
            android:textColor="#a3a3a3"
            android:layout_alignBottom="@+id/textView16"
            android:layout_alignEnd="@+id/editTextMontant"
            android:layout_alignStart="@+id/spinner_domaine"
            android:text="www." />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Téléphone : "
            android:id="@+id/textView28"
            android:autoText="false"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginLeft="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="10"
            android:id="@+id/editTextTelMag"
            android:textColor="#a3a3a3"
            android:layout_alignBottom="@+id/textView16"
            android:layout_alignEnd="@+id/editTextMontant"
            android:layout_alignStart="@+id/spinner_domaine"
            android:nestedScrollingEnabled="false" />
    </LinearLayout>

    <Button
        style="?android:textAppearanceSmall"
        android:id="@+id/buttonValider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Valider"
        android:textStyle="bold"
        android:background="@drawable/rectangle_coin_arrondis_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:onClick="tryToSendMagasin" />

</LinearLayout>